--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <base href="/">
   <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1">
   <meta name="apple-mobile-web-app-capable" content="yes">
-  <link rel="icon" type="image/x-icon" href="assets/img/laptop-join.png">
+  <link rel="icon" type="image/png" href="assets/img/laptop-join.png">
   <link rel="preconnect" href="https://fonts.gstatic.com">
 </head>
 <body>
